# SanpTranslate

./: .gitignore  CLAUDE.md  LICENSE  README.en.md  README.ja.md  README.ko.md  README.md  README.zh-TW.md  README.zh.md  index.html  logo-design.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/: release-notes.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DEV_PLAN.md  DLD.md  HLD.md  PRD.md  SRS.md  TEST_DESIGN.md
src/: App.vue  env.d.ts  globals.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/config/: manager.rs  mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/ocr/: mod.rs
src-tauri/src/translate/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/update/: mod.rs
src-tauri/src/window/: mod.rs
src/components/: ControlBar.vue  HistoryItem.vue
src/i18n/: index.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
src/router/: index.ts
src/stores/: configStore.ts  historyStore.ts  pinStore.ts
src/styles/: global.css  variables.css
src/utils/: logger.ts  tauri.ts
src/views/: HistoryView.vue  OverlayView.vue  PinView.vue  SettingsView.vue  TextTranslateView.vue
