[package]
name = "snap-translate"
version = "1.2.5"
description = "A snapshot translation tool"
authors = ["XuMingKe"]
edition = "2024"

[lib]
name = "snap_translate_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
toml = "0.8"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
rusqlite = { version = "0.33", features = ["bundled"] }
image = "0.25"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-log = "2.8.0"
log = "0.4.29"
sys-locale = "0.3"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows-sys = { version = "0.59", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", default-features = false }
